# rust_web_backend

./: .env  Cargo.toml  DOCKER.MD  LOGIN.MD  README.MD  docker-compose.yml  schema.sql
.sqlx/: query-4ebdc8af0ea9b558b79b5e73063a3cb8fd36a3fbe9ec74eb9413475fe90c0863.json  query-c4f12862e32742296e453a2f4bda2d68a61591bde45cac11e0e2c6057c41de14.json
migrations/: 20251128060154_init.sql  20251202065336_init_users_table.sql  20251202071134_init_roles_table.sql  20251202072322_init.sql  20251203074639_init.sql
src/: app.rs  lib.rs  main.rs  routes.rs  state.rs
src/auth/: handlers.rs  jwt.rs  middleware.rs
src/db/: mod.rs
src/models/: user.rs
src/repositories/: permission_repo.rs  role_repo.rs  user_repo.rs
src/routes/: user.rs
src/services/: auth_service.rs  user_service.rs
src/utils/: hash.rs  jwt.rs  mod.rs  redis_keys.rs
tests/: api_user_test.rs
