[package]
name = "web_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.3"
tracing = "0.1"
dotenvy = "0.15"
bcrypt = "0.14"
tower = "0.5.2"

[lib]
name ="web_backend"
path = "src/lib.rs"
