[package]
name = "web_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls","macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.3"
dotenvy = "0.15"
bcrypt = "0.14"
tower = "0.5.2"
once_cell = "1.21.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
deadpool-redis = "0.11"
redis = "0.24"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
hyper = "1.8.1"

[lib]
name ="web_backend"
path = "src/lib.rs"
